Use 'Stream::toList()' methods where possible.