@@ -624,11 +624,7 @@ public final class Route implements Iterable<WayPoint>, Serializable {
 
 		@Override
 		public Builder filter(final Predicate<? super WayPoint> predicate) {
-			points(
-				_points.stream()
-					.filter(predicate)
-					.collect(Collectors.toList())
-			);
+			points(_points.stream().filter(predicate).toList());
 
 			return this;
 		}
@@ -653,12 +649,7 @@ public final class Route implements Iterable<WayPoint>, Serializable {
 				? super WayPoint,
 				? extends List<WayPoint>> mapper
 		) {
-			points(
-				_points.stream()
-					.flatMap(wp -> mapper.apply(wp).stream())
-					.toList()
-			);
-
+			points(_points.stream().flatMap(wp -> mapper.apply(wp).stream()).toList());
 			return this;
 		}
 
